# education

./: BOUNTY_ISSUES.md  CERTIFICATE_IMPLEMENTATION_SUMMARY.md  PROFILE_IMPLEMENTATION_SUMMARY.md  README.md  bounty_payout.ts  course_submission.tsx  reputation_dashboard.tsx
backend/: package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/__tests__/: certificate.integration.test.ts  certificateController.test.ts  certificateService.test.ts
backend/src/controllers/: assessmentController.ts  bounty.controller.ts  certificateController.ts  userController.ts
backend/src/middleware/: auth.middleware.ts
backend/src/routes/: assessmentRoutes.ts  bounty.routes.ts  certificateRoutes.ts  userRoutes.ts
backend/src/services/: auth.service.ts  certificateService.ts  contract.service.ts  edu-token.service.ts  stellar.service.ts
contracts/: Cargo.toml  package.json
contracts/scripts/: deploy.ts
contracts/src/: bounty_escrow.rs  edu_token.rs  lib.rs  reputation.rs
docs/: SETUP.md  STELLAR_SETUP.md
frontend/: package.json
frontend/src/app/certificates/: page.tsx
frontend/src/app/profile/[walletAddress]/: page.tsx
frontend/src/components/: BountyCard.tsx  CertificateCard.tsx  CertificateList.tsx  ContributorProfile.tsx  SimpleCertificateCard.tsx  StellarConnect.tsx
frontend/src/lib/: api.ts  contracts.ts  stellar.ts
frontend/src/types/: certificate.ts
scripts/: create-bounty-issues.js  stellar-setup.js
