[package]
name = "decentralized-education-contracts"
version = "1.0.0"
edition = "2021"

[lib]
name = "decentralized_education_contracts"
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "1.0.0"

[dev-dependencies]
soroban-sdk = { version = "1.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = true
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
